<resources>

    <string name="app_name">System Launcher</string>
	<string name="top_first">Android Miracast</string>
	<string name="top_second">Apple AirPlay</string>
	<string name="top_third">Picture</string>
	<string name="top_fourth">android Launcher</string>
	<string name="buttom_first">Trip</string>
	<string name="buttom_second">Parking</string>
	<string name="buttom_third">Video History</string>
	<string name="buttom_fourth">Settings</string>
	<string name="do_not_start_activity">Don not start activity</string>
	<string name="exit">Exit</string>
	<string name="more">More</string>
	<string name="set_background">Set background</string>
	<string name="set_default_background">Set default background</string>
	<string name="set_text_size">Text size</string>
	<string name="set_text_color">Text color</string>
	<string name="edit">Edit</string>
	<string name="finish_edit">Finish Edit</string>
	<string name="start_slide">Start slide</string>
	<string name="set_time">Set time:</string>
	<string name="no_selected_image">no selected image</string>
	<string name="external_unmount">external unmount</string>
	
    <string-array name="time_interval">
        <item>3秒</item>
        <item>4秒</item>
        <item>5秒</item>
    </string-array>
</resources>