<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:gravity="center"
		android:orientation="vertical"
        >
        
        <!-- 第一行 -->
        <LinearLayout 
            style="@style/wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            
            <!-- 第一一单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_top_first"
		            style="@style/table_cell_image_button"
		            android:scaleType="fitCenter"
		            android:src="@drawable/icon_1"
		            />
		        <TextView 
		            android:id="@+id/tv_top_first"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/top_first"
		            />
	        </RelativeLayout>
	        
	        <!-- 第一二单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_top_second"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_2"
		            />
		        <TextView 
		            android:id="@+id/tv_top_second"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/top_second"
		            />
	        </RelativeLayout>
	        
   	        <!-- 第一三单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_top_third"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_3"
		            />
		        <TextView 
		            android:id="@+id/tv_top_third"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/top_third"
		            />
	        </RelativeLayout>
	        
	        <!-- 第一四单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_top_fourth"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_4"
		            />
		        <TextView 
		            android:id="@+id/tv_top_fourth"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/top_fourth"
		            />
	        </RelativeLayout>
        </LinearLayout>
        
        <!-- 第二行 -->
        <LinearLayout 
            style="@style/wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            
            <!-- 第二一单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_bottom_first"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_5"
		            />
		        <TextView 
		            android:id="@+id/tv_bottom_first"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/buttom_first"
		            />
	        </RelativeLayout>
	        
	        <!-- 第二二单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_bottom_second"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_6"
		            />
		        <TextView 
		            android:id="@+id/tv_bottom_second"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/buttom_second"
		            />
	        </RelativeLayout>
	        
   	        <!-- 第二三单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_bottom_third"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_7"
		            />
		        <TextView 
		            android:id="@+id/tv_bottom_third"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/buttom_third"
		            />
	        </RelativeLayout>
	        
	        <!-- 第二四单元格 -->
	        <RelativeLayout 
				style="@style/table_cell"       
				android:orientation="vertical"
				android:gravity="center"
	            >
		        <ImageButton 
		            android:id="@+id/ib_bottom_fourth"
		            style="@style/table_cell_image_button"
		            android:src="@drawable/icon_8"
		            />
		        <TextView 
		            android:id="@+id/tv_bottom_fourth"
		            style="@style/table_cell_image_text_view"
		            android:text="@string/buttom_fourth"
		            />
	        </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
